setup for table

--- a/public/appointment.json
+++ b/public/appointment.json
@@ -94,5 +94,29 @@
     "reservation": "jim team",
     "delete": "False",
     "confirmation": 94456
+  },
+  {
+    "date": "2022-03-21",
+    "time": "03:37",
+    "numpeople": "4",
+    "studyrooms": "KA224",
+    "name": "Bill",
+    "idnum": "015335",
+    "email": "bill@iu.edu",
+    "reservation": "Bill Group",
+    "delete": "False",
+    "confirmation": 99224
+  },
+  {
+    "date": "2022-03-15",
+    "time": "02:40",
+    "numpeople": "5",
+    "studyrooms": "KA224",
+    "name": "Millie",
+    "idnum": "135315",
+    "email": "Lotus@gmail.com",
+    "reservation": "Flower",
+    "delete": "False",
+    "confirmation": 9450
   }
 ]
