--- a/public/appointment.json
+++ b/public/appointment.json
@@ -142,5 +142,17 @@
     "reservation": "OGre1",
     "delete": "False",
     "confirmation": 66136
+  },
+  {
+    "date": "2022-03-25",
+    "time": "13:43",
+    "numpeople": "3",
+    "studyrooms": "KA220",
+    "name": "Earl",
+    "idnum": "12532",
+    "email": "earl@squirrel.com",
+    "reservation": "ogre2",
+    "delete": "False",
+    "confirmation": 85414
   }
 ]
