--- a/public/appointment.json
+++ b/public/appointment.json
@@ -154,5 +154,17 @@
     "reservation": "ogre2",
     "delete": "False",
     "confirmation": 85414
+  },
+  {
+    "date": "2022-03-01",
+    "time": "12:10",
+    "numpeople": "2",
+    "studyrooms": "KA224",
+    "name": "wgwer",
+    "idnum": "4323462",
+    "email": "wer",
+    "reservation": "Bob Bob",
+    "delete": "False",
+    "confirmation": 3186
   }
 ]
