media breakpoint edits

--- a/public/appointment.json
+++ b/public/appointment.json
@@ -478,5 +478,17 @@
     "reservation": "tyler",
     "delete": "False",
     "confirmation": 51736
+  },
+  {
+    "date": "2022-04-12",
+    "time": "17:39",
+    "numpeople": "4",
+    "studyrooms": "KA222",
+    "name": "poe",
+    "idnum": "4567891320",
+    "email": "poel@iu.edu",
+    "reservation": "Poe",
+    "delete": "False",
+    "confirmation": 95686
   }
 ]
